--- a/src/css/stilos.css
+++ b/src/css/stilos.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #000000;
+    background-color: #d1d5eb;
     overflow: hidden;
   }
   
@@ -10,7 +10,7 @@ body {
     left: 0;
     min-height: 100vh;
     width: 80vh;
-    background: linear-gradient(92deg, #618ab7 25%, rgba(0, 0, 0, 0) 75%) no-repeat;
+    background: linear-gradient(92deg, #476f9a 25%, zzzhsla(78, 13%, 80%, 0.984) 75%) no-repeat;
   }
   
   main .personagem {
@@ -41,22 +41,23 @@ body {
   }
   
   .conteudo .nome-personagem {
-    color: #efebe9;
+    color: lch(98.01% 1.48 219.96);
     font-size: 48px;
     font-family: "Secular One";
-    font-weight: 400;
+    font-weight: 400px;
     margin-bottom: 20px;
   }
   
-  .conteudo .descricao-personagem {
-    color: #ffffff;
+  .conteudo .descricao{
+    color: #dae1c3;
     font-family: "Rubik";
     font-size: 16px;
     line-height: 24px;
+    font-weight: 400px;
   }
   
   .botoes {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(52, 52, 52, 0.3);
     position: fixed;
     top: 0;
     right: 0;
@@ -71,7 +72,7 @@ body {
   
   .botoes .botao {
     border: none;
-    background-color: #000000;
+    background-color: #1c0e0e;
     width: 90px;
     height: 90px;
     cursor: pointer;
